# lynara-ai-marketing-campaigns

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/ai-orchestration/: .env.example  pyproject.toml  requirements.txt  run.py
backend/ai-orchestration/app/: __init__.py  main.py  worker.py
backend/ai-orchestration/app/api/: campaigns.py  health.py
backend/ai-orchestration/app/tasks/: __init__.py  scheduler.py
backend/api-gateway/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/api-gateway/app/: __init__.py  main.py
backend/api-gateway/app/api/: core.py  health.py  leads.py
backend/core-service/: .env.example  pyproject.toml  requirements.txt  run.py
backend/core-service/app/: __init__.py  main.py
backend/core-service/app/api/: auth.py  ocr.py
backend/core-service/app/services/: __init__.py
docs/: API.md  ARCHITECTURE.md  README.md  SETUP.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/profile/: layout.tsx  page.tsx
frontend/src/components/: README.md  index.ts
frontend/src/components/landing/: CTAWithGlowRings.tsx  DoItWithAICard.tsx  HeroFloatingCards.tsx  IntegrationDiagram.tsx  IntegrationsSimpleCard.tsx  PlatformLogos.tsx
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  PageHeader.tsx  Sidebar.tsx  index.ts
frontend/src/components/shared/: DataTable.tsx  SearchInput.tsx  Tabs.tsx  TextAreaWithSuggestion.tsx  index.ts
frontend/src/components/ui/: AnimateOnScroll.tsx  Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  LanguageSwitcher.tsx  SectionSwitcher.tsx  ThemeToggle.tsx  index.ts
frontend/src/hooks/: useInView.ts
frontend/src/lib/: i18n.ts  utils.ts
frontend/src/lib/design-system/: constants.ts  index.ts  types.ts
frontend/src/lib/i18n/: translations.ts
frontend/src/locales/en/: accounting.json  auth.json  automations.json  clients.json  common.json  contacts.json  contracts.json  dashboard.json  forms.json  header.json  home.json  landing.json  profile.json  reports.json  (+5 more)
frontend/src/providers/: I18nProvider.tsx  SectionProvider.tsx  ThemeProvider.tsx
(+43 files in other folders)
