[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lynara-campaign-ai-orchestration"
version = "1.0.0"
description = "Lynara Campaign AI Orchestration - FastAPI service for agents IA, orchestration, webhooks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Lynara Campaign Team" }
]
keywords = ["fastapi", "ai", "marketing", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.24.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
