[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lynara-campaign-api-gateway"
version = "1.0.0"
description = "Lynara Campaign API Gateway - FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
